Working on Plf.
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@16 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/src/Makefile.am
+++ b/cpp/src/Makefile.am
@@ -1,2 +1,2 @@
 lib_LIBRARIES=libsrvf.a
-libsrvf_a_SOURCES=matrix.cc plf.cc srvf.cc util.cc
+libsrvf_a_SOURCES=matrix.cc plf.cc srvf.cc util.cc interp.cc
