Plf class implemented.
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@17 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/tests/Makefile.am
+++ b/cpp/tests/Makefile.am
@@ -2,4 +2,5 @@ bin_PROGRAMS=test
 AM_CPPFLAGS=-I $(top_srcdir)/src
 AM_LDFLAGS=-L $(top_srcdir)/src
 LIBS+=-lsrvf -lboost_test_exec_monitor
-test_SOURCES=main.cc matrix_tests.cc plf_tests.cc util_tests.cc
+test_SOURCES=main.cc interp_tests.cc matrix_tests.cc util_tests.cc
+test_SOURCES+=plf_tests.cc srvf_tests.cc qmap_tests.cc
