--- a/cpp/src/Makefile.am
+++ b/cpp/src/Makefile.am
@@ -1,2 +1,2 @@
 lib_LIBRARIES=libsrvf.a
-libsrvf_a_SOURCES=matrix.cc plf.cc qmap.cc srvf.cc util.cc interp.cc
+libsrvf_a_SOURCES=matrix.cc plf.cc qmap.cc srvf.cc util.cc interp.cc fileio.cc
