--- a/cpp/src/Makefile.am
+++ b/cpp/src/Makefile.am
@@ -1,2 +1,3 @@
 lib_LIBRARIES=libsrvf.a
 libsrvf_a_SOURCES=matrix.cc plf.cc qmap.cc srvf.cc util.cc interp.cc fileio.cc
+libsrvf_a_SOURCES+=rotate.cc
