--- a/cpp/src/Makefile.am
+++ b/cpp/src/Makefile.am
@@ -1,3 +1,3 @@
 lib_LIBRARIES=libsrvf.a
-libsrvf_a_SOURCES=matrix.cc plf.cc qmap.cc srvf.cc util.cc interp.cc fileio.cc
-libsrvf_a_SOURCES+=rotate.cc
+include_HEADERS=exceptions.h fileio.h interp.h matrix.h plf.h pointset.h qmap.h reparam.h rotate.h srvf.h util.h
+libsrvf_a_SOURCES=matrix.cc plf.cc qmap.cc srvf.cc util.cc interp.cc fileio.cc rotate.cc reparam.cc
