Added basic plotting system.
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@25 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/src/Makefile.am
+++ b/cpp/src/Makefile.am
@@ -1,3 +1,5 @@
 lib_LIBRARIES=libsrvf.a
-include_HEADERS=exceptions.h fileio.h interp.h matrix.h plf.h pointset.h qmap.h reparam.h rotate.h srvf.h util.h
-libsrvf_a_SOURCES=matrix.cc plf.cc qmap.cc srvf.cc util.cc interp.cc fileio.cc rotate.cc reparam.cc
+
+include_HEADERS=exceptions.h fileio.h interp.h matrix.h plf.h plot.h plotwin.h pointset.h qmap.h render.h reparam.h rotate.h srvf.h util.h
+
+libsrvf_a_SOURCES=fileio.cc interp.cc matrix.cc plf.cc plot.cc plotwin.cc qmap.cc render.cc reparam.cc rotate.cc srvf.cc util.cc
