New namespaces (opencurves, functions, io).  Implemented srvf_to_plf().
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@29 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/src/Makefile.am
+++ b/cpp/src/Makefile.am
@@ -1,5 +1,5 @@
 lib_LIBRARIES=libsrvf.a
 
-include_HEADERS=exceptions.h fileio.h interp.h matrix.h plf.h plot.h plotwin.h pointset.h qmap.h render.h reparam.h rotate.h sphere.h srvf.h util.h
+include_HEADERS=exceptions.h fileio.h functions.h interp.h matrix.h plf.h plot.h plotwin.h pointset.h qmap.h render.h reparam.h rotate.h opencurves.h srvf.h util.h
 
-libsrvf_a_SOURCES=fileio.cc interp.cc matrix.cc plf.cc plot.cc plotwin.cc qmap.cc render.cc reparam.cc rotate.cc sphere.cc srvf.cc util.cc
+libsrvf_a_SOURCES=fileio.cc functions.cc interp.cc matrix.cc plf.cc plot.cc plotwin.cc qmap.cc render.cc reparam.cc rotate.cc opencurves.cc srvf.cc util.cc
