--- a/cpp/src/Makefile.am
+++ b/cpp/src/Makefile.am
@@ -1,5 +1,5 @@
 lib_LIBRARIES=libsrvf.a
 
-include_HEADERS=exceptions.h fileio.h functions.h interp.h matrix.h plf.h plot.h plotwin.h pointset.h qmap.h render.h reparam.h rotate.h opencurves.h srvf.h util.h
+include_HEADERS=exceptions.h fileio.h functions.h interp.h matrix.h numeric.h opencurves.h plf.h plot.h plotwin.h point.h pointset.h qmap.h render.h reparam.h rotate.h srvf.h util.h
 
-libsrvf_a_SOURCES=fileio.cc functions.cc interp.cc matrix.cc plf.cc plot.cc plotwin.cc qmap.cc render.cc reparam.cc rotate.cc opencurves.cc srvf.cc util.cc
+libsrvf_a_SOURCES=fileio.cc functions.cc interp.cc matrix.cc opencurves.cc plf.cc plot.cc plotwin.cc qmap.cc render.cc reparam.cc rotate.cc srvf.cc util.cc
