--- a/cpp/src/Makefile.am
+++ b/cpp/src/Makefile.am
@@ -1,7 +1,7 @@
-lib_LIBRARIES=libsrvf.a
+lib_LTLIBRARIES=libsrvf.la
 
 srvf_includedir=$(includedir)/srvf
 
-srvf_include_HEADERS=exceptions.h fileio.h functions.h interp.h matrix.h numeric.h opencurves.h plf.h plot.h plothelper.h plotwin.h point.h pointset.h qmap.h render.h reparam.h rotate.h srvf.h util.h
+srvf_include_HEADERS=dpnbhd.h exceptions.h fileio.h functions.h interp.h matrix.h minmaxheap.h numeric.h opencurves.h plf.h point.h pointset.h qmap.h reparam.h rotate.h srvf.h util.h
 
-libsrvf_a_SOURCES=fileio.cc functions.cc interp.cc matrix.cc opencurves.cc plf.cc plot.cc plothelper.cc plotwin.cc qmap.cc render.cc reparam.cc rotate.cc srvf.cc util.cc
+libsrvf_la_SOURCES=dpnbhd.cc fileio.cc functions.cc interp.cc matrix.cc opencurves.cc plf.cc qmap.cc reparam.cc rotate.cc srvf.cc util.cc
