Created the main srvf package to hold the core classes.  Merged io and fa packages back into the main package.  Plot and partial matching are still in separate packages.
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@37 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/plot/configure.ac
+++ b/cpp/plot/configure.ac
@@ -12,27 +12,35 @@ AC_PROG_CXX
 AC_PROG_LIBTOOL
 LT_INIT
 
+# Checks for typedefs, structures, and compiler characteristics.
+AC_TYPE_SIZE_T
+
 # Check for FLTK
-AC_LANG(C++)
-saved_LDFLAGS="$LDFLAGS"
-LDFLAGS="$LDFLAGS -lfltk2"
-AC_LINK_IFELSE(
-  [AC_LANG_PROGRAM([#include <fltk/Widget.h>],[fltk::Widget w(0,0,0,0,"")])],dnl
-  [LIBS="-lfltk2 -lfltk2_gl $LIBS"]dnl
-  AC_DEFINE([HAVE_FLTK],[],[FLTK]),dnl
-  [AC_MSG_WARN([FLTK not found])])dnl
-LDFLAGS="$saved_LDFLAGS"
+#AC_LANG(C++)
+#saved_LDFLAGS="$LDFLAGS"
+#LDFLAGS="$LDFLAGS -lfltk2"
+#AC_LINK_IFELSE(
+#  [AC_LANG_PROGRAM([#include <fltk/Widget.h>],[fltk::Widget w(0,0,0,0,"")])],dnl
+#  [LIBS="-lfltk2 -lfltk2_gl $LIBS"]dnl
+#  AC_DEFINE([HAVE_FLTK],[],[FLTK]),dnl
+#  [AC_MSG_WARN([FLTK not found])])dnl
+#LDFLAGS="$saved_LDFLAGS"
+
+fltk2_config_prog=fltk2-config
+AC_ARG_WITH([fltk2-config],
+  [AS_HELP_STRING([--with-fltk2-config=PATH],
+    [Path to the fltk2-config program (optional)])],
+  [fltk2_config_prog="$withval"],
+  [])
+FLTK_CFLAGS="`$fltk2_config_prog --use-gl --cflags`"
+FLTK_LDFLAGS="`$fltk2_config_prog --use-gl --ldflags`"
+
+AC_SUBST(FLTK_CFLAGS)
+AC_SUBST(FLTK_LDFLAGS)
 
 # Check for OpenGL
 AC_CHECK_LIB([GL],[glBegin])
 AC_CHECK_LIB([GLU],[gluLookAt])
-
-# Checks for header files.
-
-# Checks for typedefs, structures, and compiler characteristics.
-AC_TYPE_SIZE_T
-
-# Checks for library functions.
 
 AC_CONFIG_FILES([Makefile src/Makefile])
 AC_OUTPUT
