--- a/oct/Makefile
+++ b/oct/Makefile
@@ -2,6 +2,7 @@ CC=gcc
 CFLAGS=-fPIC -g -pg -O2 -Wall -DDP_NBHD_DIM=6
 VANILLA_OBJS=dp_grid.o
 LABELLED_OBJS=dp_grid_jose.o
+HEADERS=dp_grid.h dp_nbhd.h
 
 all: vanilla
 
