Partial matching bugfixes, demo.
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@41 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/Makefile.am
+++ b/cpp/Makefile.am
@@ -1,1 +1,9 @@
-SUBDIRS=plot srvf pmatch
+if COND_PLOT
+MAYBE_PLOT=plot
+endif
+
+if COND_PMATCH
+MAYBE_PMATCH=pmatch
+endif
+
+SUBDIRS=srvf $(MAYBE_PLOT) $(MAYBE_PMATCH)
