--- a/cpp/pmatch/src/Makefile.am
+++ b/cpp/pmatch/src/Makefile.am
@@ -3,7 +3,10 @@ AM_LDFLAGS=-L$(top_srcdir)/../srvf/src/.libs
 
 lib_LTLIBRARIES=libsrvf-pmatch.la
 
+libsrvf_pmatch_la_LDFLAGS= -static
+
 srvf_includedir=$(includedir)/srvf
+srvf_include_HEADERS=paretoset.h partialmatch.h
 
 LIBS+=-lsrvf -lgomp
 
