Build system:  added demo programs to top-level project.
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@43 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/Makefile.am
+++ b/cpp/Makefile.am
@@ -6,4 +6,8 @@ if COND_PMATCH
 MAYBE_PMATCH=pmatch
 endif
 
-SUBDIRS=srvf $(MAYBE_PLOT) $(MAYBE_PMATCH)
+if COND_DEMOS
+MAYBE_DEMOS=demos
+endif
+
+SUBDIRS=srvf $(MAYBE_PLOT) $(MAYBE_PMATCH) $(MAYBE_DEMOS)
