--- a/cpp/pmatch/src/Makefile
+++ b/cpp/pmatch/src/Makefile
@@ -113,7 +113,7 @@ CPPFLAGS =
 CXX = g++
 CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -g -O0 -Wall -Werror
+CXXFLAGS = -g -O2 -Wall -Werror
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -135,7 +135,7 @@ INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LD = /usr/i686-pc-linux-gnu/bin/ld
 LDFLAGS =  -L/home/yevgeni/lib -L/usr/lib -L/usr/local/lib
 LIBOBJS = 
-LIBS =  -lsrvf -lgomp
+LIBS =  -lsrvf
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIPO = 
 LN_S = ln -s
@@ -216,7 +216,7 @@ target_alias =
 top_build_prefix = ../
 top_builddir = ..
 top_srcdir = ..
-AM_CPPFLAGS = -I$(top_srcdir)/../srvf/src
+AM_CPPFLAGS = -I$(top_srcdir)/../srvf/src $(OPENMP_CXXFLAGS)
 AM_LDFLAGS = -L$(top_srcdir)/../srvf/src/.libs
 lib_LTLIBRARIES = libsrvf-pmatch.la
 libsrvf_pmatch_la_LDFLAGS = -static
