--- a/cpp/pmatch/src/Makefile.am
+++ b/cpp/pmatch/src/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS=-I$(top_srcdir)/../srvf/src
+AM_CPPFLAGS=-I$(top_srcdir)/../srvf/src $(OPENMP_CXXFLAGS)
 AM_LDFLAGS=-L$(top_srcdir)/../srvf/src/.libs
 
 lib_LTLIBRARIES=libsrvf-pmatch.la
@@ -8,6 +8,6 @@ libsrvf_pmatch_la_LDFLAGS= -static
 srvf_includedir=$(includedir)/srvf
 srvf_include_HEADERS=paretoset.h partialmatch.h
 
-LIBS+=-lsrvf -lgomp
+LIBS+=-lsrvf
 
 libsrvf_pmatch_la_SOURCES=partialmatch.cc pmatch_util.cc rotselect.cc
