--- a/cpp/demos/pmatch/src/Makefile.am
+++ b/cpp/demos/pmatch/src/Makefile.am
@@ -1,6 +1,10 @@
+bin_PROGRAMS=srvf_pmatch_ui
+
 AM_CPPFLAGS=$(SRVF_CPPFLAGS) $(FLTK_CFLAGS)
 AM_LDFLAGS=$(SRVF_LDFLAGS) $(FLTK_LDFLAGS)
+
 LIBS+=$(SRVF_LIBS) -lgomp
 
-bin_PROGRAMS=pmdemo
-pmdemo_SOURCES=main.cc ui.cc
+srvf_pmatch_ui_SOURCES=main.cc ui.cc
+
+EXTRA_DIST=data
