--- a/cpp/demos/Makefile.am
+++ b/cpp/demos/Makefile.am
@@ -2,4 +2,8 @@ if COND_DEMO_PMATCH
 MAYBE_DEMO_PMATCH=pmatch
 endif
 
-SUBDIRS=$(MAYBE_DEMO_PMATCH)
+if COND_DEMO_PMATCH_GUI
+MAYBE_DEMO_PMATCH=pmatch-gui
+endif
+
+SUBDIRS=$(MAYBE_DEMO_PMATCH) $(MAYBE_DEMO_PMATCH_GUI)
