--- a/cpp/demos/pmatch-gui/src/Makefile.am
+++ b/cpp/demos/pmatch-gui/src/Makefile.am
@@ -3,8 +3,6 @@ bin_PROGRAMS=srvf_pmatch_ui
 AM_CPPFLAGS=$(SRVF_CPPFLAGS) $(FLTK_CFLAGS)
 AM_LDFLAGS=$(SRVF_LDFLAGS) $(FLTK_LDFLAGS)
 
-LIBS+=$(SRVF_LIBS) -lgomp
+LIBS+=$(SRVF_LIBS)
 
 srvf_pmatch_ui_SOURCES=main.cc ui.cc
-
-EXTRA_DIST=data
