Cleaned up build scripts.
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@47 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/Makefile.am
+++ b/cpp/Makefile.am
@@ -13,3 +13,27 @@ endif
 SUBDIRS=srvf $(MAYBE_PLOT) $(MAYBE_PMATCH) $(MAYBE_DEMOS)
 
 EXTRA_DIST=testdata
+bindistdir=$(PACKAGE)-$(VERSION)-bin
+
+bindist: $(DISTFILES)
+	mkdir -p $(bindistdir)
+	mkdir -p $(bindistdir)/libs
+	cp -d srvf/src/.libs/libsrvf*.so* $(bindistdir)/libs
+if COND_PMATCH
+	cp -d pmatch/src/.libs/libsrvf*.so* $(bindistdir)/libs
+endif
+if COND_PLOT
+	cp -d plot/src/.libs/libsrvf*.so* $(bindistdir)/libs
+endif
+if COND_DEMOS
+if COND_PMATCH
+	cp demos/pmatch/src/srvf_pmatch.bin $(bindistdir)
+	cp aux/run_with_ldpath.sh $(bindistdir)/srvf_pmatch
+if COND_PLOT
+	cp demos/pmatch-gui/src/srvf_pmatch_gui.bin $(bindistdir)
+	cp aux/run_with_ldpath.sh $(bindistdir)/srvf_pmatch_gui
+endif
+endif
+endif
+	tar -cvzf $(bindistdir).tar.gz $(bindistdir)
+	rm -rf $(bindistdir)
