--- a/cpp/srvf/configure.ac
+++ b/cpp/srvf/configure.ac
@@ -10,6 +10,13 @@ AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 
 # Checks for programs.
 AC_PROG_CXX
+AC_PROG_AWK
+AC_PROG_CC
+AC_PROG_CPP
+AC_PROG_INSTALL
+AC_PROG_LN_S
+AC_PROG_MAKE_SET
+AC_PROG_RANLIB
 LT_INIT
 
 
@@ -17,18 +24,25 @@ LT_INIT
 AC_HEADER_STDBOOL
 AC_C_INLINE
 AC_TYPE_SIZE_T
+AC_CHECK_TYPES([ptrdiff_t])
+
 
 # Checks for library functions.
 AC_CHECK_FUNCS([sqrt])
 
+
 # Check for GSL
-AC_CHECK_LIB([gsl],[gsl_matrix_alloc],[],[AC_MSG_ERROR([gsl not found])])
+AC_CHECK_LIB([gsl],[gsl_matrix_alloc],[],
+  [AC_MSG_ERROR([gsl not found])],[-lgslcblas])
+
 
 # Check for OpenMP
 AC_LANG(C++)
 AC_OPENMP
 CXXFLAGS="$CXXFLAGS $OPENMP_CXXFLAGS"
 
+
+# Optional FLTK support.  Only used by the unit tests.
 fltk_config_prog="fltk-config"
 AC_ARG_WITH([fltk-config],
   [AS_HELP_STRING([--with-fltk-config=PATH],
@@ -54,6 +68,7 @@ if test "$plot_enabled" = yes; then :
     AC_MSG_ERROR([cannot find $fltk_config_prog])
   fi
 fi
+
 
 AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
 AC_OUTPUT
