Changed copyright to FSU SSAMG.
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@48 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/demos/configure.ac
+++ b/cpp/demos/configure.ac
@@ -26,6 +26,8 @@ AC_ARG_ENABLE(pmatch,
 
 
 # Conditionally enable each program if its dependencies are satisfied
+AC_CONFIG_SUBDIRS([shapedist])  # always enabled
+
 demo_pmatch_enabled="no"
 if test "$libsrvf_pmatch_enabled" = yes; then :
   demo_pmatch_enabled="yes"
