--- a/cpp/demos/Makefile.am
+++ b/cpp/demos/Makefile.am
@@ -6,4 +6,4 @@ if COND_DEMO_PMATCH_GUI
 MAYBE_DEMO_PMATCH_GUI=pmatch-gui
 endif
 
-SUBDIRS=$(MAYBE_DEMO_PMATCH) $(MAYBE_DEMO_PMATCH_GUI)
+SUBDIRS=shapedist $(MAYBE_DEMO_PMATCH) $(MAYBE_DEMO_PMATCH_GUI)
