--- a/cpp/demos/pmatch/configure.ac
+++ b/cpp/demos/pmatch/configure.ac
@@ -27,7 +27,7 @@ AC_TYPE_SIZE_T
 
 
 # Check for GSL
-AC_CHECK_LIB([gsl],[gsl_matrix_alloc],[],[AC_MSG_ERROR([gsl not found])],[-lgslcblas])
+AC_CHECK_LIB([gsl],[gsl_matrix_alloc],[LIBS="-lgsl -lgslcblas $LIBS"],[AC_MSG_ERROR([gsl not found])],[-lgslcblas])
 
 
 # The SRVF sources and libraries in this directory tree
