--- a/cpp/demos/pmatch-gui/configure.ac
+++ b/cpp/demos/pmatch-gui/configure.ac
@@ -54,7 +54,7 @@ SRVF_CPPFLAGS+=" -I../../../pmatch/src"
 SRVF_LDFLAGS="-L../../../srvf/src/.libs"
 SRVF_LDFLAGS+=" -L../../../plot/src/.libs"
 SRVF_LDFLAGS+=" -L../../../pmatch/src/.libs"
-SRVF_LIBS=" -lsrvf-pmatch -lsrvf-plot -lsrvf"
+SRVF_LIBS=" -Wl,-Bstatic -lsrvf-pmatch -lsrvf-plot -lsrvf -Wl,-Bdynamic"
 AC_SUBST(SRVF_CPPFLAGS)
 AC_SUBST(SRVF_LDFLAGS)
 AC_SUBST(SRVF_LIBS)
