Removed configure scripts from subdirectories.  Moved plot stuff into srvf::plot namespace.  Minor fixes for unit tests.
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@50 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/demos/Makefile.am
+++ b/cpp/demos/Makefile.am
@@ -1,9 +1,5 @@
-if COND_DEMO_PMATCH
-MAYBE_DEMO_PMATCH=pmatch
-endif
-
-if COND_DEMO_PMATCH_GUI
+if COND_PLOT
 MAYBE_DEMO_PMATCH_GUI=pmatch-gui
 endif
 
-SUBDIRS=shapedist $(MAYBE_DEMO_PMATCH) $(MAYBE_DEMO_PMATCH_GUI)
+SUBDIRS=shapedist pmatch $(MAYBE_DEMO_PMATCH_GUI)
