--- a/cpp/demos/pmatch/src/Makefile.am
+++ b/cpp/demos/pmatch/src/Makefile.am
@@ -1,8 +1,8 @@
 bin_PROGRAMS=srvf_pmatch
 
-AM_CPPFLAGS=$(SRVF_CPPFLAGS) $(OPENMP_CXXFLAGS)
+AM_CPPFLAGS=-I$(top_srcdir)/srvf/src $(OPENMP_CXXFLAGS)
 AM_LDFLAGS=$(SRVF_LDFLAGS) $(OPENMP_CXXFLAGS)
 
-LIBS+=$(SRVF_LIBS)
-
 srvf_pmatch_SOURCES=main.cc
+srvf_pmatch_LDADD=$(top_srcdir)/srvf/src/libsrvf.la
+srvf_pmatch_LDFLAGS=-static
