--- a/cpp/srvf/src/Makefile.am
+++ b/cpp/srvf/src/Makefile.am
@@ -4,7 +4,6 @@ lib_LTLIBRARIES=libsrvf.la
 
 srvf_includedir=$(includedir)/srvf
 
-srvf_include_HEADERS=dpnbhd.h exceptions.h fileio.h functions.h interp.h kdtree.h matrix.h minmaxheap.h numeric.h opencurves.h plf.h point.h pointset.h qmap.h reparam.h rotate.h srvf.h util.h
+srvf_include_HEADERS=dpnbhd.h exceptions.h fileio.h functions.h interp.h kdtree.h matchselect.h matrix.h minmaxheap.h numeric.h opencurves.h paretoset.h partialmatch.h plf.h point.h pointset.h qmap.h reparam.h rotate.h rotselect.h srvf.h util.h
 
-libsrvf_la_SOURCES=dpnbhd.cc fileio.cc functions.cc interp.cc matrix.cc opencurves.cc plf.cc qmap.cc reparam.cc rotate.cc srvf.cc util.cc
-
+libsrvf_la_SOURCES=dpnbhd.cc fileio.cc functions.cc interp.cc matchselect.cc matrix.cc opencurves.cc partialmatch.cc plf.cc qmap.cc reparam.cc rotate.cc rotselect.cc srvf.cc util.cc
