Moving stuff around
git-svn-id: file:///home/yevgeni/dev/repos/srvf/trunk@52 6678053c-22da-4495-bf9c-98dc6e5a3f48

--- a/cpp/Makefile.am
+++ b/cpp/Makefile.am
@@ -4,7 +4,7 @@ if COND_PLOT
 MAYBE_PLOT=plot
 endif
 
-SUBDIRS=srvf $(MAYBE_PLOT) demos
+SUBDIRS=srvf src tests $(MAYBE_PLOT) demos
 
 EXTRA_DIST=testdata
 
@@ -12,10 +12,10 @@ bindistdir=$(PACKAGE)-$(VERSION)-bin
 bindist: $(DISTFILES)
 	mkdir -p $(bindistdir)
 	mkdir -p $(bindistdir)/libs
-	cp -d srvf/src/.libs/libsrvf*.so* $(bindistdir)/libs
+	cp -d src/.libs/libsrvf*.so* $(bindistdir)/libs
 	cp demos/pmatch/src/srvf_pmatch $(bindistdir)
 if COND_PLOT
-	cp -d plot/src/.libs/libsrvf*.so* $(bindistdir)/libs
+	cp -d plot/.libs/libsrvf*.so* $(bindistdir)/libs
 	cp demos/pmatch-gui/src/srvf_pmatch_gui $(bindistdir)
 endif
 	tar -cvzf $(bindistdir).tar.gz $(bindistdir)
