--- a/cpp/srvf/Makefile.am
+++ b/cpp/srvf/Makefile.am
@@ -1,1 +1,2 @@
-SUBDIRS = src tests
+srvf_includedir=$(includedir)/srvf
+srvf_include_HEADERS=dpnbhd.h exceptions.h fileio.h functions.h interp.h kdtree.h matchselect.h matrix.h minmaxheap.h numeric.h opencurves.h paretoset.h partialmatch.h plf.h plot.h plothelper.h plotwin.h point.h pointset.h qmap.h render.h reparam.h rotate.h rotselect.h srvf.h util.h
